Fixed vertical spacing in featured clients

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -476,7 +476,7 @@
   .featured-clients{
     text-align: justify;
     font-size: 0.1px;
-    padding: 20px;
+    padding: 70px;
 
     &:after{
       content: '';
